--- a/max_div_seq/index.ipynb
+++ b/max_div_seq/index.ipynb
@@ -9,12 +9,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pybryt"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ".\n",
+      "├── index.ipynb\n",
+      "├── max_div_seq-ref.pkl\n",
+      "├── max_div_seq.ipynb\n",
+      "└── submissions\n",
+      "    ├── 1.ipynb\n",
+      "    ├── 1.py\n",
+      "    ├── 2.ipynb\n",
+      "    ├── 2.py\n",
+      "    ├── 3.ipynb\n",
+      "    └── 3.py\n",
+      "\n",
+      "1 directory, 9 files\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%bash\n",
+    "tree"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "markdown",
@@ -25,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,14 +86,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": "['submissions/2.py', 'submissions/3.py', 'submissions/1.py']"
      },
-     "execution_count": 4,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -71,22 +106,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
     }
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/razlandau/Documents/Code/python/lib/python3.7/site-packages/IPython/nbformat.py:13: ShimWarning: The `IPython.nbformat` package has been deprecated since IPython 4.0. You should import from nbformat instead.\n",
-      "  \"You should import from nbformat instead.\", ShimWarning)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import IPython.nbformat  as nbf\n",
     "from pathlib import Path\n",
@@ -116,14 +142,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/plain": "[<pybryt.student.StudentImplementation at 0x7ff2f3c263c8>,\n <pybryt.student.StudentImplementation at 0x7ff2f3c3e048>,\n <pybryt.student.StudentImplementation at 0x7ff2f341dba8>]"
+      "text/plain": "[<pybryt.student.StudentImplementation at 0x7ff2f41d3b38>,\n <pybryt.student.StudentImplementation at 0x7ff2f3c26438>,\n <pybryt.student.StudentImplementation at 0x7ff2f3e3fb38>]"
      },
-     "execution_count": 6,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -138,14 +164,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": "[ReferenceResult([\n   AnnotationResult(satisfied=False, annotation=pybryt.NotAnnotation)\n ]),\n ReferenceResult([\n   AnnotationResult(satisfied=True, annotation=pybryt.NotAnnotation)\n ]),\n ReferenceResult([\n   AnnotationResult(satisfied=True, annotation=pybryt.NotAnnotation)\n ])]"
      },
-     "execution_count": 7,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -160,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
