--- a/max_even_seq/index.ipynb
+++ b/max_even_seq/index.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "outputs": [],
    "source": [
     "SEMESTER = '2017B'"
@@ -34,12 +34,12 @@
     "from shutil import copy, rmtree\n",
     "from tqdm import tqdm"
    ],
-   "execution_count": 2,
+   "execution_count": 18,
    "outputs": []
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,22 +60,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 21,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
     }
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/razlandau/Documents/Code/python/lib/python3.7/site-packages/IPython/nbformat.py:13: ShimWarning: The `IPython.nbformat` package has been deprecated since IPython 4.0. You should import from nbformat instead.\n",
-      "  \"You should import from nbformat instead.\", ShimWarning)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import IPython.nbformat  as nbf\n",
     "from pathlib import Path\n",
@@ -90,7 +81,7 @@
     "\n",
     "    cell = nbf.v4.new_code_cell(source=code)\n",
     "    cells.append(cell)\n",
-    "    cell = nbf.v4.new_code_cell(source=\"max_div_seq(116, 1)\")\n",
+    "    cell = nbf.v4.new_code_cell(source=\"max_even_seq(222)\")\n",
     "    cells.append(cell)\n",
     "\n",
     "    nb = nbf.v4.new_notebook(cells = cells)\n",
@@ -105,210 +96,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "is_executing": true
+    }
+   },
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 16%|█▌        | 31/198 [01:22<07:01,  2.52s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "SyntaxError in subs/2017B/65.ipynb\n",
-      "ValueError in subs/2017B/51.ipynb\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 21%|██        | 42/198 [01:46<06:27,  2.48s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "FileNotFoundError in subs/2017B/55.ipynb\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 198/198 [01:49<00:00,  1.81it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "FileNotFoundError in subs/2017B/61.ipynb\n",
-      "FileNotFoundError in subs/2017B/30.ipynb\n",
-      "FileNotFoundError in subs/2017B/20.ipynb\n",
-      "FileNotFoundError in subs/2017B/71.ipynb\n",
-      "FileNotFoundError in subs/2017B/82.ipynb\n",
-      "FileNotFoundError in subs/2017B/45.ipynb\n",
-      "FileNotFoundError in subs/2017B/14.ipynb\n",
-      "FileNotFoundError in subs/2017B/149.ipynb\n",
-      "FileNotFoundError in subs/2017B/118.ipynb\n",
-      "FileNotFoundError in subs/2017B/6.ipynb\n",
-      "FileNotFoundError in subs/2017B/99.ipynb\n",
-      "FileNotFoundError in subs/2017B/166.ipynb\n",
-      "FileNotFoundError in subs/2017B/137.ipynb\n",
-      "FileNotFoundError in subs/2017B/195.ipynb\n",
-      "FileNotFoundError in subs/2017B/103.ipynb\n",
-      "FileNotFoundError in subs/2017B/152.ipynb\n",
-      "FileNotFoundError in subs/2017B/142.ipynb\n",
-      "FileNotFoundError in subs/2017B/113.ipynb\n",
-      "FileNotFoundError in subs/2017B/185.ipynb\n",
-      "FileNotFoundError in subs/2017B/127.ipynb\n",
-      "FileNotFoundError in subs/2017B/176.ipynb\n",
-      "FileNotFoundError in subs/2017B/89.ipynb\n",
-      "FileNotFoundError in subs/2017B/2.ipynb\n",
-      "FileNotFoundError in subs/2017B/156.ipynb\n",
-      "FileNotFoundError in subs/2017B/107.ipynb\n",
-      "FileNotFoundError in subs/2017B/133.ipynb\n",
-      "FileNotFoundError in subs/2017B/162.ipynb\n",
-      "FileNotFoundError in subs/2017B/191.ipynb\n",
-      "FileNotFoundError in subs/2017B/181.ipynb\n",
-      "FileNotFoundError in subs/2017B/172.ipynb\n",
-      "FileNotFoundError in subs/2017B/123.ipynb\n",
-      "FileNotFoundError in subs/2017B/117.ipynb\n",
-      "FileNotFoundError in subs/2017B/146.ipynb\n",
-      "FileNotFoundError in subs/2017B/3.ipynb\n",
-      "FileNotFoundError in subs/2017B/157.ipynb\n",
-      "FileNotFoundError in subs/2017B/106.ipynb\n",
-      "FileNotFoundError in subs/2017B/132.ipynb\n",
-      "FileNotFoundError in subs/2017B/163.ipynb\n",
-      "FileNotFoundError in subs/2017B/190.ipynb\n",
-      "FileNotFoundError in subs/2017B/180.ipynb\n",
-      "FileNotFoundError in subs/2017B/173.ipynb\n",
-      "FileNotFoundError in subs/2017B/122.ipynb\n",
-      "FileNotFoundError in subs/2017B/116.ipynb\n",
-      "FileNotFoundError in subs/2017B/147.ipynb\n",
-      "FileNotFoundError in subs/2017B/7.ipynb\n",
-      "FileNotFoundError in subs/2017B/98.ipynb\n",
-      "FileNotFoundError in subs/2017B/167.ipynb\n",
-      "FileNotFoundError in subs/2017B/136.ipynb\n",
-      "FileNotFoundError in subs/2017B/194.ipynb\n",
-      "FileNotFoundError in subs/2017B/102.ipynb\n",
-      "FileNotFoundError in subs/2017B/153.ipynb\n",
-      "FileNotFoundError in subs/2017B/143.ipynb\n",
-      "FileNotFoundError in subs/2017B/112.ipynb\n",
-      "FileNotFoundError in subs/2017B/184.ipynb\n",
-      "FileNotFoundError in subs/2017B/126.ipynb\n",
-      "FileNotFoundError in subs/2017B/177.ipynb\n",
-      "FileNotFoundError in subs/2017B/88.ipynb\n",
-      "FileNotFoundError in subs/2017B/0.ipynb\n",
-      "FileNotFoundError in subs/2017B/58.ipynb\n",
-      "FileNotFoundError in subs/2017B/105.ipynb\n",
-      "FileNotFoundError in subs/2017B/154.ipynb\n",
-      "FileNotFoundError in subs/2017B/193.ipynb\n",
-      "FileNotFoundError in subs/2017B/160.ipynb\n",
-      "FileNotFoundError in subs/2017B/131.ipynb\n",
-      "FileNotFoundError in subs/2017B/121.ipynb\n",
-      "FileNotFoundError in subs/2017B/170.ipynb\n",
-      "FileNotFoundError in subs/2017B/183.ipynb\n",
-      "FileNotFoundError in subs/2017B/144.ipynb\n",
-      "FileNotFoundError in subs/2017B/115.ipynb\n",
-      "FileNotFoundError in subs/2017B/48.ipynb\n",
-      "FileNotFoundError in subs/2017B/19.ipynb\n",
-      "FileNotFoundError in subs/2017B/4.ipynb\n",
-      "FileNotFoundError in subs/2017B/39.ipynb\n",
-      "FileNotFoundError in subs/2017B/68.ipynb\n",
-      "FileNotFoundError in subs/2017B/197.ipynb\n",
-      "FileNotFoundError in subs/2017B/135.ipynb\n",
-      "FileNotFoundError in subs/2017B/164.ipynb\n",
-      "FileNotFoundError in subs/2017B/150.ipynb\n",
-      "FileNotFoundError in subs/2017B/101.ipynb\n",
-      "FileNotFoundError in subs/2017B/111.ipynb\n",
-      "FileNotFoundError in subs/2017B/140.ipynb\n",
-      "FileNotFoundError in subs/2017B/174.ipynb\n",
-      "FileNotFoundError in subs/2017B/125.ipynb\n",
-      "FileNotFoundError in subs/2017B/187.ipynb\n",
-      "FileNotFoundError in subs/2017B/78.ipynb\n",
-      "FileNotFoundError in subs/2017B/29.ipynb\n",
-      "FileNotFoundError in subs/2017B/5.ipynb\n",
-      "FileNotFoundError in subs/2017B/38.ipynb\n",
-      "FileNotFoundError in subs/2017B/69.ipynb\n",
-      "FileNotFoundError in subs/2017B/196.ipynb\n",
-      "FileNotFoundError in subs/2017B/134.ipynb\n",
-      "FileNotFoundError in subs/2017B/165.ipynb\n",
-      "FileNotFoundError in subs/2017B/151.ipynb\n",
-      "FileNotFoundError in subs/2017B/100.ipynb\n",
-      "FileNotFoundError in subs/2017B/110.ipynb\n",
-      "FileNotFoundError in subs/2017B/141.ipynb\n",
-      "FileNotFoundError in subs/2017B/175.ipynb\n",
-      "FileNotFoundError in subs/2017B/124.ipynb\n",
-      "FileNotFoundError in subs/2017B/186.ipynb\n",
-      "FileNotFoundError in subs/2017B/79.ipynb\n",
-      "FileNotFoundError in subs/2017B/28.ipynb\n",
-      "FileNotFoundError in subs/2017B/1.ipynb\n",
-      "FileNotFoundError in subs/2017B/59.ipynb\n",
-      "FileNotFoundError in subs/2017B/104.ipynb\n",
-      "FileNotFoundError in subs/2017B/155.ipynb\n",
-      "FileNotFoundError in subs/2017B/192.ipynb\n",
-      "FileNotFoundError in subs/2017B/161.ipynb\n",
-      "FileNotFoundError in subs/2017B/130.ipynb\n",
-      "FileNotFoundError in subs/2017B/120.ipynb\n",
-      "FileNotFoundError in subs/2017B/171.ipynb\n",
-      "FileNotFoundError in subs/2017B/182.ipynb\n",
-      "FileNotFoundError in subs/2017B/145.ipynb\n",
-      "FileNotFoundError in subs/2017B/114.ipynb\n",
-      "FileNotFoundError in subs/2017B/49.ipynb\n",
-      "FileNotFoundError in subs/2017B/18.ipynb\n",
-      "FileNotFoundError in subs/2017B/66.ipynb\n",
-      "FileNotFoundError in subs/2017B/37.ipynb\n",
-      "FileNotFoundError in subs/2017B/95.ipynb\n",
-      "FileNotFoundError in subs/2017B/52.ipynb\n",
-      "FileNotFoundError in subs/2017B/42.ipynb\n",
-      "FileNotFoundError in subs/2017B/13.ipynb\n",
-      "FileNotFoundError in subs/2017B/85.ipynb\n",
-      "FileNotFoundError in subs/2017B/27.ipynb\n",
-      "FileNotFoundError in subs/2017B/76.ipynb\n",
-      "FileNotFoundError in subs/2017B/189.ipynb\n",
-      "FileNotFoundError in subs/2017B/56.ipynb\n",
-      "FileNotFoundError in subs/2017B/33.ipynb\n",
-      "FileNotFoundError in subs/2017B/62.ipynb\n",
-      "FileNotFoundError in subs/2017B/91.ipynb\n",
-      "FileNotFoundError in subs/2017B/81.ipynb\n",
-      "FileNotFoundError in subs/2017B/72.ipynb\n",
-      "FileNotFoundError in subs/2017B/23.ipynb\n",
-      "FileNotFoundError in subs/2017B/17.ipynb\n",
-      "FileNotFoundError in subs/2017B/46.ipynb\n",
-      "FileNotFoundError in subs/2017B/57.ipynb\n",
-      "FileNotFoundError in subs/2017B/32.ipynb\n",
-      "FileNotFoundError in subs/2017B/63.ipynb\n",
-      "FileNotFoundError in subs/2017B/90.ipynb\n",
-      "FileNotFoundError in subs/2017B/80.ipynb\n",
-      "FileNotFoundError in subs/2017B/73.ipynb\n",
-      "FileNotFoundError in subs/2017B/22.ipynb\n",
-      "FileNotFoundError in subs/2017B/16.ipynb\n",
-      "FileNotFoundError in subs/2017B/47.ipynb\n",
-      "FileNotFoundError in subs/2017B/198.ipynb\n",
-      "FileNotFoundError in subs/2017B/67.ipynb\n",
-      "FileNotFoundError in subs/2017B/36.ipynb\n",
-      "FileNotFoundError in subs/2017B/94.ipynb\n",
-      "FileNotFoundError in subs/2017B/53.ipynb\n",
-      "FileNotFoundError in subs/2017B/43.ipynb\n",
-      "FileNotFoundError in subs/2017B/12.ipynb\n",
-      "FileNotFoundError in subs/2017B/84.ipynb\n",
-      "FileNotFoundError in subs/2017B/26.ipynb\n",
-      "FileNotFoundError in subs/2017B/77.ipynb\n",
-      "FileNotFoundError in subs/2017B/188.ipynb\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
+      "  6%|▌         | 11/198 [00:17<04:48,  1.54s/it]"
      ]
     }
    ],
@@ -324,8 +123,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "is_executing": true
+    }
+   },
    "outputs": [],
    "source": [
     "results = []\n",
@@ -338,8 +141,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "is_executing": true
+    }
+   },
    "outputs": [],
    "source": [
     "path = f'./advices/{SEMESTER}'\n",
