--- a/max_even_seq/index.ipynb
+++ b/max_even_seq/index.ipynb
@@ -9,9 +9,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "outputs": [],
    "source": [
+    "TIME_LIMIT = 10\n",
     "SEMESTER = '2017B'"
    ],
    "metadata": {
@@ -31,15 +32,19 @@
    "source": [
     "import pybryt\n",
     "import os\n",
+    "import signal\n",
+    "from contextlib import contextmanager\n",
     "from shutil import copy, rmtree\n",
-    "from tqdm import tqdm"
+    "from tqdm import tqdm\n",
+    "import IPython.nbformat as nbf\n",
+    "from pathlib import Path"
    ],
-   "execution_count": 18,
+   "execution_count": 8,
    "outputs": []
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -68,9 +73,6 @@
    },
    "outputs": [],
    "source": [
-    "import IPython.nbformat  as nbf\n",
-    "from pathlib import Path\n",
-    "\n",
     "notebooks = []\n",
     "\n",
     "for sub in subs:\n",
@@ -107,15 +109,103 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  6%|▌         | 11/198 [00:17<04:48,  1.54s/it]"
+      " 10%|█         | 20/198 [00:40<12:32,  4.23s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TimeoutException in subs/2017B/11.ipynb\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 16%|█▌        | 31/198 [01:00<05:19,  1.92s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SyntaxError in subs/2017B/65.ipynb\n",
+      "ValueError in subs/2017B/51.ipynb\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 30%|███       | 60/198 [01:56<11:20,  4.93s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TimeoutException in subs/2017B/152.ipynb\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 33%|███▎      | 65/198 [02:04<04:41,  2.11s/it]Task exception was never retrieved\n",
+      "future: <Task finished coro=<NotebookClient.async_execute_cell() done, defined at /Users/razlandau/Documents/Code/python/lib/python3.7/site-packages/nbclient/client.py:762> exception=DeadKernelError('Kernel died')>\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/Users/razlandau/Documents/Code/python/lib/python3.7/site-packages/nbclient/client.py\", line 841, in async_execute_cell\n",
+      "    exec_reply = await self.task_poll_for_reply\n",
+      "  File \"/Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/asyncio/futures.py\", line 260, in __await__\n",
+      "    yield self  # This tells Task to wait for completion.\n",
+      "  File \"/Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/asyncio/tasks.py\", line 292, in __wakeup\n",
+      "    future.result()\n",
+      "  File \"/Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/asyncio/futures.py\", line 173, in result\n",
+      "    raise CancelledError\n",
+      "concurrent.futures._base.CancelledError\n",
+      "\n",
+      "During handling of the above exception, another exception occurred:\n",
+      "\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/asyncio/tasks.py\", line 225, in __step\n",
+      "    result = coro.throw(exc)\n",
+      "  File \"/Users/razlandau/Documents/Code/python/lib/python3.7/site-packages/nbclient/client.py\", line 845, in async_execute_cell\n",
+      "    raise DeadKernelError(\"Kernel died\")\n",
+      "nbclient.exceptions.DeadKernelError: Kernel died\n",
+      "Task exception was never retrieved\n",
+      "future: <Task finished coro=<NotebookClient._async_poll_kernel_alive() done, defined at /Users/razlandau/Documents/Code/python/lib/python3.7/site-packages/nbclient/client.py:664> exception=AssertionError()>\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/asyncio/tasks.py\", line 223, in __step\n",
+      "    result = coro.send(None)\n",
+      "  File \"/Users/razlandau/Documents/Code/python/lib/python3.7/site-packages/nbclient/client.py\", line 668, in _async_poll_kernel_alive\n",
+      "    await self._async_check_alive()\n",
+      "  File \"/Users/razlandau/Documents/Code/python/lib/python3.7/site-packages/nbclient/client.py\", line 701, in _async_check_alive\n",
+      "    assert self.kc is not None\n",
+      "AssertionError\n",
+      " 46%|████▋     | 92/198 [02:50<03:06,  1.76s/it]"
      ]
     }
    ],
    "source": [
+    "class TimeoutException(Exception): pass\n",
+    "\n",
+    "@contextmanager\n",
+    "def time_limit(seconds):\n",
+    "    def signal_handler(_, __):\n",
+    "        raise TimeoutException(\"Timed out!\")\n",
+    "    signal.signal(signal.SIGALRM, signal_handler)\n",
+    "    signal.alarm(seconds)\n",
+    "    try:\n",
+    "        yield\n",
+    "    finally:\n",
+    "        signal.alarm(0)\n",
+    "\n",
     "student_impls = []\n",
     "for sub in tqdm(notebooks):\n",
     "    try:\n",
-    "        student_impls.append(pybryt.StudentImplementation(sub))\n",
+    "        with time_limit(TIME_LIMIT):\n",
+    "            student_impls.append(pybryt.StudentImplementation(sub))\n",
     "    except Exception as e:\n",
     "        print(f'{type(e).__name__} in {sub}')\n",
     "        student_impls.append(None)"
@@ -151,6 +241,7 @@
    "source": [
     "path = f'./advices/{SEMESTER}'\n",
     "if os.path.exists(path):\n",
+    "    print('in')\n",
     "    rmtree(path)\n",
     "os.makedirs(path)\n",
     "for sp, res in zip(subs, results):\n",
