--- a/max_even_seq/index.ipynb
+++ b/max_even_seq/index.ipynb
@@ -98,12 +98,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "pycharm": {
-     "is_executing": true
-    }
-   },
+   "execution_count": 12,
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -183,7 +179,63 @@
       "  File \"/Users/razlandau/Documents/Code/python/lib/python3.7/site-packages/nbclient/client.py\", line 701, in _async_check_alive\n",
       "    assert self.kc is not None\n",
       "AssertionError\n",
-      " 46%|████▋     | 92/198 [02:50<03:06,  1.76s/it]"
+      " 57%|█████▋    | 113/198 [03:25<02:32,  1.80s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TabError in subs/2017B/48.ipynb\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 83%|████████▎ | 165/198 [04:46<00:49,  1.49s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "IndentationError in subs/2017B/85.ipynb\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 96%|█████████▌| 190/198 [05:27<00:13,  1.64s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SyntaxError in subs/2017B/94.ipynb\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 97%|█████████▋| 193/198 [05:30<00:06,  1.39s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SyntaxError in subs/2017B/12.ipynb\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 198/198 [05:37<00:00,  1.70s/it]\n"
      ]
     }
    ],
@@ -213,12 +265,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "pycharm": {
-     "is_executing": true
-    }
-   },
+   "execution_count": 13,
+   "metadata": {},
    "outputs": [],
    "source": [
     "results = []\n",
@@ -231,17 +279,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "pycharm": {
-     "is_executing": true
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "in\n"
+     ]
     }
-   },
-   "outputs": [],
+   ],
    "source": [
     "path = f'./advices/{SEMESTER}'\n",
     "if os.path.exists(path):\n",
-    "    print('in')\n",
     "    rmtree(path)\n",
     "os.makedirs(path)\n",
     "for sp, res in zip(subs, results):\n",
